<resources>
    <string name="about">About</string>
    <string name="about_subtext">Hi!\nMy name is Uriah Shaul Mandel, and I\'m the developer of this platform.\n
        I\'ve spent most of my \"adult\" life making this platform, and I\'ve released it for free, for all to
        use.\nYou are more than welcome to contact me by email:\nbaldphone.contact@gmail.com
    </string>
    <string name="accessibility_level">Accessibility Level</string>
    <string name="accessibility_settings">Accessibility</string>
    <string name="accidental_touches">Accidental Touch Guard</string>
    <string name="accidental_touches_settings_subtext">This guard prevents touches when the phone is covered. If you experience issues, you can turn it off.</string>
    <string name="accidental_touches_subtext">Accidental touch detected.\nPress OK to continue using the phone.\nIf this message keeps appearing, you can disable the feature in Accessibility settings.</string>
    <string name="acknowledgments">Acknowledgments</string>
    <string name="adaptive">Adaptive</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="add_alarm_quickly">Add Timer</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_emergency_contact">Add</string>
    <string name="add_pill">Add Pill</string>
    <string name="add_shortcut">Add Shortcut</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="add_to_home">Add to Home</string>
    <string name="add_to_sos">Add to SOS</string>
    <string name="address">Address</string>
    <string name="advanced_options">Advanced Options</string>
    <string name="afternoon">Afternoon</string>
    <string name="airplane_mode">Airplane Mode</string>
    <string name="alarm_name">Alarm Name</string>
    <string name="alarm_volume">Alarm Volume</string>
    <string name="alarm_volume_subtext">Choose Volume for Alarms.\nVolume increases from left to right.</string>
    <string name="alarms">Alarms</string>
    <string name="alarms_repeats_every">Alarm repeats every</string>
    <string name="all_alarms">All Alarms</string>
    <string name="allow">Allow</string>
    <string name="already_setted">Already set!\nTap here to switch to it.</string>
    <string name="an_error_has_occurred">An error has occurred!</string>
    <string name="and_welcome_to_baldphone">and welcome to Baldphone</string>
    <string name="apps">Apps</string>
    <string name="are_you_sure_you_want_to_delete___">Are you sure you want to delete %s?</string>
    <string name="assistant">Assistant</string>
    <string name="at_least_one_day_must_be_selected">At least one day must be selected!</string>
    <string name="auto_brightness">Auto\nBrightness</string>
    <string name="backspace">backspace</string>
    <string name="baldphone_bla_allow_permission">Please allow the following permissions:</string>
    <string name="blocked">Blocked</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="brightness">Brightness</string>
    <string name="brightness_subtext">Change brightness</string>
    <string name="cache_cleared_successfully">Cache Cleared Successfully!</string>
    <string name="call">Call</string>
    <string name="calling">Calling...</string>
    <string name="call_log">Call Log:</string>
    <string name="call_subtext">This permission is required in order to call contacts.</string>
    <string name="dialog_call_title">Confirm Call</string>
    <string name="dialog_call_message_full">Would you like to call %1$s (%2$s)?</string>
    <string name="dialog_call_message_number_only">Would you like to call %1$s?</string>
    <string name="dialog_call_positive">Call</string>
    <string name="dialog_call_negative">Cancel</string>
    <string name="settings_call_behavior_title">Call Behavior</string>
    <string name="settings_call_behavior_message">Choose how you want to make calls:</string>
    <string name="settings_call_behavior_option_confirm">Ask before calling</string>
    <string name="settings_call_behavior_option_direct">Call immediately</string>
    <string name="camera">Camera</string>
    <string name="camera_subtext">This permission is required to use the flashlight.</string>
    <string name="cancel">Cancel</string>
    <string name="change_pills_time">Change Pills Time</string>
    <string name="change_system_settings_subtext">Please allow BaldPhone to change settings, such as font size and screen brightness.</string>
    <string name="choose_friday">Fri</string>
    <string name="choose_monday">Mon</string>
    <string name="choose_saturday">Sat</string>
    <string name="choose_sunday">Sun</string>
    <string name="choose_thursday">Thu</string>
    <string name="choose_tuesday">Tue</string>
    <string name="choose_wednesday">Wed</string>
    <string name="clear">Clear</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_cache_subtext">Are you sure you want to clear the cache? This may fix some issues, but shortcuts on the Home screen will be removed.</string>
    <string name="clear_data">Clear All Data</string>
    <string name="clear_data_subtext">Deletes all user data and settings.\nBaldPhone will return to its default state, as if freshly installed.</string>
    <string name="clear_data_subtext2">100%?</string>
    <string name="clear_data_subtext3">Are you sure? Pressing Yes will delete all data!</string>
    <string name="clock">Clock</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="connection_settings">Wireless &amp; Location</string>
    <string name="contact_must_has_name">Contact must have a Name</string>
    <string name="contact_details">Contact</string>
    <string name="contacts">Contacts</string>
    <string name="contacts_read_subtext">This permission is required in order to read contacts.</string>
    <string name="contacts_subtext">This permission is required in order to add new contacts.</string>
    <string name="crash">Oops!\nBaldPhone ran into a problem and will now restart.</string>
    <string name="current_time">Current Time</string>
    <string name="custom">Custom</string>
    <string name="dark">Dark</string>
    <string name="delete">Delete</string>
    <string name="delete___">Delete %s?</string>
    <string name="delete_all_alarms">Delete all alarms</string>
    <string name="dialer">Dialer</string>
    <string name="display_settings">Display</string>
    <string name="done">Done</string>
    <string name="down">Down</string>
    <string name="edit">Edit</string>
    <string name="email">Email:</string>
    <string name="enable_notification_access">Enable Notification Access</string>
    <string name="enable_notification_access_subtext">Please give BaldPhone access to notifications.</string>
    <string name="enter">Enter</string>
    <string name="enter_contact_or_phone_number">Enter contact name:</string>
    <string name="evening">Evening</string>
    <string name="example_of_different_text_sizes">"Example of different text sizes.\nShould be readable and not overflow."</string>
    <string name="external_storage_subtext">This permission is required in order to save pictures.</string>
    <string name="feedback">Send Feedback</string>
    <string name="feedback_cannot_be_empty">Feedback cannot be empty!</string>
    <string name="feedback_sent_successfully">>Feedback sent successfully. Thank you!</string>
    <string name="first_please_select_how_you_want_to_interact_with_buttons">Please choose your preferred accessibility level.</string>
    <string name="font_size">Font Size</string>
    <string name="friday">Friday</string>
    <string name="have_hard_time_using_the_phone_s_keyboard_use_baldphone_s_big_keyboard_instead">Having trouble using your phone’s keyboard?\nTry BaldPhone’s BIG keyboard instead!</string>
    <string name="hello">Hello</string>
    <string name="help">Video Tutorial</string>
    <string name="hide">Hide</string>
    <string name="high_level">High Level</string>
    <string name="home_phone_number">Home phone number</string>
    <string name="hour">Hour</string>
    <string name="huge">Huge</string>
    <string name="internet">Internet</string>
    <string name="invoked_in">Invoked in:</string>
    <string name="it_s_highly_recommended_to_use_baldphone_s_home_screen_as_the_default_home_launcher">It’s highly recommended to set BaldPhone as your default home screen.</string>
    <string name="language">Language</string>
    <string name="language_settings">Languages</string>
    <string name="large">Large</string>
    <string name="left_handed">Left Handed</string>
    <string name="light">Light</string>
    <string name="location">Location</string>
    <string name="emergency_services">Emergency Services</string>
    <string name="mail">Mail</string>
    <string name="maps">Maps</string>
    <string name="medium">Medium</string>
    <string name="medium_level">Medium Level</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="minute">Minute</string>
    <string name="minutes">Minutes</string>
    <string name="missed">Missed</string>
    <string name="mobile_phone_number">Mobile phone number</string>
    <string name="monday">Monday</string>
    <string name="more">More</string>
    <string name="morning">Morning</string>
    <string name="name">Name</string>
    <string name="named__">named</string>
    <string name="new_alarm___was_created">new alarm %s was created!</string>
    <string name="nfc">NFC</string>
    <string name="no">No</string>
    <string name="notes">Notes</string>
    <string name="notes_settings">Notes</string>
    <string name="notes_settings_subtext">Enable or disable the Notes page on the home screen.</string>
    <string name="notifications">Notifications</string>
    <string name="of">of</string>
    <string name="off">Off</string>
    <string name="ok">OK</string>
    <string name="on">On</string>
    <string name="only_once">Only once</string>
    <string name="open">Open</string>
    <string name="outgoing">Outgoing</string>
    <string name="page">Page</string>
    <string name="permissions_part">Permissions</string>
    <string name="personalization_settings">Personalization</string>
    <string name="phone">Phone</string>
    <string name="photo">Photo</string>
    <string name="photos">Photos</string>
    <string name="pill_added">Pill added</string>
    <string name="pill_name">Pill Name</string>
    <string name="pills">Pills</string>
    <string name="press_longer">Press Longer!</string>
    <string name="timer">Timer</string>
    <string name="read_call_log">Read Call History</string>
    <string name="read_call_log_subtext">This permission is required in order to view the call history.</string>
    <string name="read_contacts">Read contacts</string>
    <string name="received">Received</string>
    <string name="recent">Recents</string>
    <string name="regular_level">Regular level</string>
    <string name="remove_from_favorite">Remove from Favorite</string>
    <string name="remove_from_home">Remove from Home</string>
    <string name="remove_from_sos">Remove from SOS</string>
    <string name="remove_shortcut">Remove shortcut</string>
    <string name="removed_all_alarms">Removed all alarms!</string>
    <string name="repeats_every_day">Every day</string>
    <string name="right_handed">Right Handed</string>
    <string name="saturday">Saturday</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="label_lock_screen_short">Lock Screen</string>
    <string name="accessibility_permission_dialog_message">To enable one-tap screen lock, BaldPhone needs Accessibility permission.\nIt’s safe and used only for this feature.</string>
    <string name="dialog_button_not_now">Not now</string>
    <string name="dialog_button_enable">Enable in settings</string>
    <string name="permission_needed_title">Permission Needed</string>
</resources>